update methode index in controller Rental
